miyalilan/miragdagan impormasyun

--- a/Richard_Juan.mw
+++ b/Richard_Juan.mw
@@ -1,27 +1,27 @@
 {{Infobox Chinese-language singer and actor/sandbox
-| name                    = Richard Hwan<br>Richard Juan
+| name                    = Richard Juan
 | gender                  = male
 | image                   = Richard Hwan Richard Juan.jpg
 | image_size              = 250px
 | alt                     = 
 | caption                 = 
 | chinesename             = 
-| tradchinesename         = 範鴻志
+| tradchinesename         = 范鴻志
 | simpchinesename         = 范鸿志
 | pinyinchinesename       = Fàn Hóng Zhì
 | jyutpingchinesename     = Faan6 Hung4 Zi3
 | yalechinesename         = 
 | pojchinesename          = Hoān Hông Chì
-| birth_name              = Richard Ching Hwan
-| ethnicity               = [[Deng Tsinu|Tsinu]]
-| origin                  = 
+| birth_name              = Richard Ching Juan
+| ethnicity               = [[Deng Hoklo|Hokkien]]
+| origin                  = {{flagicon|Hong Kong}} [[Hong Kong]]
 | birth_date              = {{Birth date and age|mf=yes|1992|08|02}}
-| birth_place             = 
+| birth_place             = {{flagicon|Philippines}} [[Menila]], [[Pilipinas]]
 | death_date              = 
 | death_place             = 
 | restingplace            = 
 | restingplacecoordinates = 
-| othername               = Richard Juan
+| othername               = Richard Hwan
 | occupation              = [[TV personality|aktor]], [[Model (person)|modelu]]
 | genre                   = 
 | instrument              = 
@@ -35,7 +35,7 @@
 | partner                 = 
 | children                = 
 | parents                 = 
-| ancestry                = 
+| ancestry                = [[Lalawigan ning Fujian]], [[China|Tsina]]
 | influences              = 
 | influenced              = 
 | education               = 
@@ -45,7 +45,7 @@
 }}
 
 
-I '''Richard Ching Hwan''' ([[Chinese language|Tsinu]]: '''Fan Hong Zhi''';<ref>{{cite web|url=https://www.facebook.com/richardhwanofficial |title=Facebook |publisher=Facebook |date= |accessdate=2014-07-29}}</ref> mibait Agostu 2, 1992), kebaluan ya murin anti mung '''Richard Hwan''' at '''Richard Juan''', metung yang personalidad king telebisyon ampong modelu king [[Pilipinas]].
+I '''Richard Ching Juan''' ([[Chinese language|Tsinu]]: '''Fan Hong Zhi''';<ref>{{cite web|url=https://www.facebook.com/richardhwanofficial |title=Facebook |publisher=Facebook |date= |accessdate=2014-07-29}}</ref> mibait Agostu 2, 1992), kebaluan ya murin anti mung '''Richard Juan''' at '''Richard Hwan''', metung yang personalidad king telebisyon ampong modelu king [[Pilipinas]].
 
 ==Deng Gantimpala at Nominasyon==
 {| class="wikitable sortable"
