*Empty MediaWiki Message*

--- a/Hapon.mw
+++ b/Hapon.mw
@@ -49,23 +49,23 @@
 |footnotes = 
 }}{{Portal}}
 
-Ing '''Japon o Japan''' ([[Japanese language|Japanese]]: 日本, '''Nihon''' o '''Nippon''', kabaldugan na "aldo penibatan") metung yang [[bangsa]] king [[Aslagang Asia]] a makapadurut ya king [[Pacific Ocean]], [[Dayat Malat ning Japan]], [[Dayat Malat ning Fililpinas]],  [[East China Sea]], at ning [[Dayat Malat ning Okhotsk]]. King albugan ya pin ing [[Korea]] ([[Pangulung Korea|Pangulu]] at [[Mauling Korea|Mauli]]), king pangulu iyapi ing [[Russia]], at king maulingalbugan ing [[People's Republic of China|Tsina]] at [[Taiwan]].
+Ing bangsang '''Hapon''' o '''Japon''' ([[Japanese language|Hapones]]: 日本, '''Nihon''' o '''Nippon''', kabaldugan na "aldo penibatan") metung yang [[bangsa]] king [[Aslagang Asia]] a makapadurut ya king [[Pasipiku Kadayatmalatan]], [[Dayatmalat ning Hapon]], [[Dayatmalat ning Pilipinas]],  [[East China Sea|Aslagang Dayatmalat ning Tsina]], at ning [[Dayatmalat ning Okhotsk]]. King albugan ya pin ing [[Korea]] ([[Pangulung Korea|Pangulu]] at [[Mauling Korea|Mauli]]), king pangulu iyapi ing [[Russia|Rusya]], at king maulingalbugan ing [[People's Republic of China|Tsina]] at [[Taiwan]].
 
-Metung kareng pekamaluid a bangsa mayayaus ya naman  "[[Names of Japan|Land of the Rising Sun (Gabun ning Tatas a Aldo]]" atin yang 3,000 pulu. Deng pekamaragul a pulu ilapin deng, magumpisang pangulu papauntang mauli, [[Hokkaido|Hokkaidō]], [[Honshu|Honshū]], [[Shikoku]], and [[Kyushu|Kyūshū]]. Deng [[Pulung]]  [[Ryukyu]], kayabe ne ing  [[Okinawa]], atiu la king maulingalbugan ning peka-pulu.
+Metung kareng pekamaluid a bangsa mayayaus ya naman  "[[Ding lagyu ning Hapon|Land of the Rising Sun]]" (Gabun ning Tatas a Aldo) atin yang 3,000 pulu. Deng pekamaragul a pulu ilapin deng, magumpisang pangulu papauntang mauli, [[Hokkaido|Hokkaidō]], [[Honshu|Honshū]], [[Shikoku]], and [[Kyushu|Kyūshū]]. Deng [[Pulung]]  [[Ryukyu]], kayabe ne ing  [[Okinawa]], atiu la king maulingalbugan ning peka-pulu.
 
 == Amlat ==
 <!--Please try to keep this section as general as possible. Specific information should be added to a more specific article-->
-{{main|History of Japan}}
+{{main|Kasaleselan ning Hapon}}
 
 === Amlat Bayu Misulat ===
 [[File:MiddleJomonVessel.JPG|thumb|left|160px|A Middle [[Jomon]] vessel (3000 to 2000 BC)]]
 
 === Classical era ===
-[[File:TodaijiDaibutsu0224.jpg|thumb|160px|The Great [[Buddha]] at [[Todaiji]], [[Nara, Nara|Nara]], originally cast in 752]]
+[[File:TodaijiDaibutsu0224.jpg|thumb|160px|Ing Dagulang [[Buddha]] king [[Todaiji]], [[Nara, Nara|Nara]], originally cast anyang 752]]
 
 === Medieval era ===
 
-[[File:NanbanGroup.JPG|thumb|160px|A group of [[Portuguese people|Portuguese]] [[Nanban]] foreigners, 17th century]]
+[[File:NanbanGroup.JPG|thumb|160px|Ing pangkat da reng [[Portuguese people|Portuguese]] [[Nanban]] foreigners, ka-17 siglu]]
 
 === Makabayung panaun ===
 [[File:Japanese_Empire2.png|thumb|240px|The Empire of Japan encompassed most of East and Southeast Asia at its height, in 1942]]
@@ -75,9 +75,9 @@ Metung kareng pekamaluid a bangsa mayayaus ya naman  "[[Names of Japan|Land of t
 === Ing Parliament ===
 [[File:The Diet.jpg|250px|thumb|right|The Parliament sits in joint session.]]
 
-== Geografia ning Japan ==
+== Talangyatu (Heograpiya) ning Hapon ==
 [[File:Ja-map.png|right|Map of Japan]]
-{{main|Geography of Japan}}
+{{main|Heograpiya ning Hapon}}
 
 === Klima ===
 
@@ -90,28 +90,26 @@ Metung kareng pekamaluid a bangsa mayayaus ya naman  "[[Names of Japan|Land of t
 {{col-begin}}
 {{col-2}}
 Honshu:
-* [[Tohoku region|Tohoku]] - north-eastern Honshu in which [[Sendai, Miyagi|Sendai]] and [[Fukushima, Fukushima|Fukushima]] are large cities.
+* [[Tohoku region|Tohoku]] - pangulung-aslagang Honshu in which [[Sendai, Miyagi|Sendai]] and [[Fukushima, Fukushima|Fukushima]] are large cities.
 * [[Kanto region|Kanto]] - includes [[Tokyo]], [[Kawasaki, Kanagawa|Kawasaki]], [[Yokohama]], [[Yokosuka, Kanagawa|Yokosuka]], and surrounding coastal plain. Also includes [[Gunma Prefecture|Gunma]], [[Saitama Prefecture|Saitama]], [[Chiba Prefecture|Chiba]], [[Tochigi Prefecture|Tochigi]], and [[Ibaraki Prefecture|Ibaraki]] Prefectures.
 * [[Chubu region|Chubu]] - mountainous middle region dominated by the [[Japanese Alps]]. The Sea of Japan side is the [[Hokuriku region]], and the Pacific side is the [[Tokai region]]. The main cities of Hokuriku are [[Niigata, Niigata|Niigata]] and [[Kanazawa, Ishikawa|Kanazawa]], and the main cities of Tokai are [[Nagoya, Aichi|Nagoya]] (the nation's fourth largest) and [[Shizuoka, Shizuoka|Shizuoka]].
 * Kinki or [[Kansai]] region - ancient center of culture and commerce, including [[Osaka, Osaka|Osaka]], [[Kyoto, Kyoto|Kyoto]], [[Kobe, Hyogo|Kobe]], [[Nara, Nara|Nara]], [[Wakayama Prefecture|Wakayama]], [[Shiga Prefecture|Shiga]] and [[Mie Prefecture|Mie]] Prefectures.
 * [[Chugoku region|Chugoku]] - includes the cities [[Hiroshima, Hiroshima|Hiroshima]] and [[Okayama, Okayama|Okayama]].
 
 {{col-2}}
-Other islands:
-* [[Hokkaido]] - major cities are [[Sapporo, Hokkaido|Sapporo]] and [[Hakodate, Hokkaido|Hakodate]].
-* [[Shikoku]] - the smallest of the main four islands, known as a destination for Buddhist pilgrims. The main cities are [[Matsuyama, Ehime|Matsuyama]] and [[Takamatsu, Kagawa|Takamatsu]].
-* [[Kyushu]] - southernmost of the four main islands. The main towns include [[Fukuoka, Fukuoka|Fukuoka]], [[Kitakyushu, Fukuoka|Kitakyushu]] and [[Nagasaki, Nagasaki|Nagasaki]].
-* [[Okinawa Prefecture|Okinawa]] - semitropical southern island chain reaching out to [[Taiwan]]. The only major city is [[Naha, Okinawa|Naha]].
+Deng aliwang pulu:
+* [[Hokkaido]] - deng pun lakanbalen: [[Sapporo, Hokkaido|Sapporo]] at [[Hakodate, Hokkaido|Hakodate]].
+* [[Shikoku]] - ing pekamalati kareng apat a pun pulu, kebaluan ya anti mung destinasyun kareng peregrinung Budista. Deng pun lakanbalen, [[Matsuyama, Ehime|Matsuyama]] at [[Takamatsu, Kagawa|Takamatsu]].
+* [[Kyushu]] - pekamauli kareng apat a pun pulu. Deng pun balen: [[Fukuoka, Fukuoka|Fukuoka]], [[Kitakyushu, Fukuoka|Kitakyushu]] at [[Nagasaki, Nagasaki|Nagasaki]].
+* [[Okinawa Prefecture|Okinawa]] - subtropikal a mauling talaumpukang pulu angga king [[Taiwan]]. Ing [[Naha, Okinawa|Naha]] ya mu pin ing pun lakanbalen.
 {{col-end}}
 
-=== Deng Prefecture ===
-{{main|Prefectures ning Japan}}
+=== Deng Prepektura ===
+{{main|Ding Prepektura ning Hapon}}
 
-.
+== Ekonomiya ==
 
-== Economy ==
-
-{{main|Economy of Japan}}
+{{main|Ekonomiya ning Hapon}}
 
 
 
@@ -129,24 +127,24 @@ Other islands:
 {{seealso|List of Japanese companies}}
 
 == Society ==
-=== Demographics ===
-{{main|Demographics of Japan}}
+=== Talangmalda (Demograpiya) ===
+{{main|Demograpiya ning Hapon}}
 
 
 
-=== Religion ===
+=== Reliyon ===
 [[File:Toshodaiji.jpg|thumb|251px|right|The [[Toshodaiji]]
 
-=== Education ===
-{{main|Education in Japan}}
+=== Panipagaral (Edukasyun) ===
+{{main|Edukasyun king Hapon}}
 
 
 
-=== Language ===
+=== Amanu ===
 {{main|Japanese Language}}
 
 === Kalinangan ===
-[[File:Japanese traditional dancer cropped.jpg|thumb|Metung a japon a katutubung teterak]]
+[[File:Japanese traditional dancer cropped.jpg|thumb|Metung Hapones a katutubung teterak]]
 {{main|Culture of Japan}}
 
 == Military ==
@@ -156,7 +154,7 @@ Other islands:
 * S. N. Eisenstadt, ''Japanese Civilization: A Comparative View'', [[University of Chicago]] 1995. (ISBN 0-226-19558-9)
 * ''Japan a Profile of Nation'', [[Kodansha]] International, 1999. (ISBN 4-7700-2384-7)
 
-== Further reading ==
+== Maki-mayigit pang pamagbasa ==
 {{sisterlinks|Japan}}
 * ''The Cambridge Encyclopaedia of Japan'', [[University of Cambridge|Cambridge Univ]]. Press, 1993 (ISBN 0-521-40352-9)
 * De Mente, ''The Japanese Have a Word For It'', [[McGraw-Hill]], 1997 (ISBN 0-8442-8316-9)
