--- a/Atin_Ku_Pûng_Singsing.mw
+++ b/Atin_Ku_Pûng_Singsing.mw
@@ -1,7 +1,7 @@
 Ini kanta yang tradisyunal a Capampangan. 
 
 '''ATIN CU PUNG SINGSING'''<p>
-Ating singsing<br>
+Putang inang singsing
 Metung yang timpukan<br>
 Amana que iti quing Indung ibatan<br>
 Sangkan queng sininup<br>
