Picture in higher resolution, Quality Image on commons - [[File:Spain Andalusia Seville BW 2015-10-23 15-35-15.jpg]]

--- a/Sevilla.mw
+++ b/Sevilla.mw
@@ -47,7 +47,7 @@ area_code = |
 Image:Cathedral and Archivo de Indias - Seville.jpg|View of the Cathedral of Seville and the ''Archivo de Indias''
 Image:Image-HolyWeek1.jpg|The distinctive cloaks and hoods of the Easter Holy Week processions
 Image:SevillaPuenteTrianaNoche.jpg|Night view of Bridge of Triana from Betis Street
-Image:SevillaExpo29.jpg|1929 Exposition Building, the [[Plaza de España (Seville)|Plaza de España]]
+Image:Spain Andalusia Seville BW 2015-10-23 15-35-15.jpg|1929 Exposition Building, the [[Plaza de España (Seville)|Plaza de España]]
 Image:Sevilla2005Julio 050.jpg|Seville [[AVE]] Railway Station
 Image:Calatrava Puente del Alamillo Seville.jpg [[Puente del Alamillo|Alamillo Bridge]], designed by [[Santiago Calatrava]]
 Image:Spain Andalusia Seville BW 2015-10-23 13-04-37.jpg|The Giralda Tower
