Picture in higher resolution, Quality Image on commons - [[File:Spain Andalusia Seville BW 2015-10-23 15-35-15.jpg]]

--- a/Seville.mw
+++ b/Seville.mw
@@ -52,7 +52,7 @@ Image:Cathedral and Archivo de Indias - Seville.jpg|Mayayakit keng  Cathedral ni
 Image:Image-HolyWeek1.jpg|Deng tibabal ampong talukbung da reng Semana Santang prusisiun.
 Image:SevillaPuenteTrianaNoche.jpg|Mayayakit ustung bengi keng Tete ning Triana ibat keng dalan Betis
 Image:EspanaNight.jpg|Mayayakit ustung bengi keng [[Plaza de España (Seville)|Plaza de España]]
-Image:SevillaExpo29.jpg|1929 Exposition Building, ing [[Plaza de España (Seville)|Plaza de España]]
+Image:Spain Andalusia Seville BW 2015-10-23 15-35-15.jpg|1929 Exposition Building, ing [[Plaza de España (Seville)|Plaza de España]]
 Image:Sevilla2005Julio 050.jpg|Seville [[AVE]] Tren stasiun
 Image:Calatrava Puente del Alamillo Seville.jpg [[Puente del Alamillo|Alamillo Bridge]], kinrokis neng [[Santiago Calatrava]]
 Image:Spain Andalusia Seville BW 2015-10-23 13-04-37.jpg|Ing Giralda Torri
