*Empty MediaWiki Message*

--- a/Template:Softredirect.mw
+++ b/Template:Softredirect.mw
@@ -1,5 +1,5 @@
 <div style="min-height: 57px; border: 1px solid #aaaaaa; background-color: #f9f9f9; width: 50%; margin: 0 auto 1em auto; padding: .2em; text-align: justify;">
-<div style="float: left">[[File:Wiki.png|50px|link=]]</div>
+<div style="float: left">[[File:Wikipedia-logo-v2-pam.svg|50px|link=]]</div>
 <div style="margin-left: 60px">This page can be found at '''[[:{{{1}}}|{{{2|{{{1}}}}}}]]'''.<br />''This is an [[Soft redirect|interwiki redirect]]''.</div>
 </div><noinclude>
 </noinclude>
