--- a/Himno_ning_Kapampangan.mw
+++ b/Himno_ning_Kapampangan.mw
@@ -1,32 +1,1 @@
-{{Unreferenced|date=Hulyu 2016}}
-
-*[[HIMNU NING KAPAMPANGAN]]
-
-Kapampangan misapwak
-
-King legwan, na ning, alaya
-
-Gabun ding pantas at marangal
-
-Sibul ning lugud, karinan ning tepangan
-
-Batis ning katalaruan, at panamdam makabalen
-
-Ligaya mi ing mie payapa
-
-King malugud mung kandungan
-
-
-Kapampangan, sale ning legwan
-
-Kapampangan sandalan ning katimawan
-
-Kilub ning pusu mi, atin kang dambana
-
-Luid ka! Luid ka!
-
-Palsintan ming, Kapampangan
-
-Luid ka! Luid ka!
-
-Palsintan ming, Kapampangan
+This product is brought to you by youjizz.com
