--- a/Himno_ning_Kapampangan.mw
+++ b/Himno_ning_Kapampangan.mw
@@ -1,3 +1,32 @@
-[Himno Ning Patakla]
+{{Unreferenced|date=Hulyu 2016}}
 
-Kantut youjizz.com
+*[[HIMNU NING KAPAMPANGAN]]
+
+Kapampangan misapwak
+
+King legwan, na ning, alaya
+
+Gabun ding pantas at marangal
+
+Sibul ning lugud, karinan ning tepangan
+
+Batis ning katalaruan, at panamdam makabalen
+
+Ligaya mi ing mie payapa
+
+King malugud mung kandungan
+
+
+Kapampangan, sale ning legwan
+
+Kapampangan sandalan ning katimawan
+
+Kilub ning pusu mi, atin kang dambana
+
+Luid ka! Luid ka!
+
+Palsintan ming, Kapampangan
+
+Luid ka! Luid ka!
+
+Palsintan ming, Kapampangan
