Replacing BanderaSevilla1.svg with [[File:Flag_of_Sevilla,_Spain.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/Sevilla.mw
+++ b/Sevilla.mw
@@ -8,7 +8,7 @@ spanish_name = Sevilla|
 nickname = |
 city_motto = NO8DO|
 city_motto_means = I was not abandoned|
-image_flag = BanderaSevilla1.svg|
+image_flag = Flag of Sevilla, Spain.svg|
 image_flag_size = 150px|
 image_coat_of_arms = |
 image_coat_of_arms_size = 150px|
