Replacing BanderaSevilla1.svg with [[File:Flag_of_Sevilla,_Spain.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/Seville.mw
+++ b/Seville.mw
@@ -9,7 +9,7 @@
 | image_skyline = Cathedral and Archivo de Indias - Seville.jpg
 | image_skyline_size = 270px
 | image_skyline_caption = Ing [[Cathedral ning Seville]] metung ya kareng pekamaragul keti yatu
-| image_flag = BanderaSevilla1.svg
+| image_flag = Flag of Sevilla, Spain.svg
 | image_flag_size = 150px
 | image_coat_of_arms = EscudoSevilla3.jpg
 | image_coat_of_arms_size = 150px
