*Empty MediaWiki Message*

--- a/Usain_Bolt.mw
+++ b/Usain_Bolt.mw
@@ -4,9 +4,9 @@
 | name = Usain Bolt
 | nickname = [[Lightning]] Bolt
 | honorific-suffix = <br /><small>[[Order of Jamaica|OJ]]</small>
-| image =Usain Bolt 2012 Olympics 1.jpg
+| image =Usain Bolt Rio 100m final 2016k.jpg
 | imagesize = 220px
-| caption =I Bolt king 2012 Summer Olympics
+| caption =I Bolt king 2016 Summer Olympics
 | nationality =[[Jamaica]]n
 | sport = [[Track and field]]
 | event = [[Sprint (running)|Sprints]]
