/* Suglung Palwal */ Wikivoyage

--- a/Sarthe.mw
+++ b/Sarthe.mw
@@ -22,10 +22,10 @@ Ing '''Sarthe'''  metung yang [[Ding Departamentu ning France|departamentu]] kin
 * [[Arrondissements of the Sarthe department]]
 
 == Suglung Palwal ==
+{{wikivoyage|fr:Sarthe|Sarthe}}
 * {{fr icon}} [http://www.Sarthe.pref.gouv.fr/ Prefecture]
 * {{fr icon}} [http://www.cg72.fr/ General Council]
 * {{fr icon}} [http://www.sarthe.com/ Sarthe information]
-* {{fr icon}} [http://wikitravel.org/fr/article/Sarthe Sarthe on Wikitravel]
 * {{fr icon}} [http://www.mnhn.fr/mnhn/cbnbp/actions/inventorier/atlas_sarthe/caracteristiquesA72.htm Physical and climatic properties of Sarthe]
 * {{en icon}} [http://joinusinfrance.net/html/sarthe.html Comprehensive Information on Sarthe and other Departments in Pays-de-la-Loire]
 
