/* Kasusug Kilwal */ Wikivoyage

--- a/Bacolod.mw
+++ b/Bacolod.mw
@@ -26,9 +26,9 @@ Ing '''Lakanbalen ning Bacolod'''  primera yang klasing [[Ding Lakanbalen ning F
 Fact|date=February 2007}}
 
 == Kasusug Kilwal ==
+{{wikivoyage|Bacolod}}
 * [http://www.bacolodcity.gov.ph/ Official Website of the City Government of Bacolod]
 * [http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
-* [http://wikitravel.org/en/Bacolod Bacolod - Wikitravel]
 * [http://headlines.exploreiloilo.com/ Philipine Headlines - Bacolod]
 * [http://www.masskara.com Bacolod's Newest Online Gathering Place] - We need your support :)
 {{Indy Philippine cities}}
