/* Suglung Palwal */ Wikivoyage

--- a/Rhône-Alpes.mw
+++ b/Rhône-Alpes.mw
@@ -54,8 +54,8 @@ Ing '''Rhône-Alpes''' ([[Franco-Provençal language|Franco-Provençal]] : ''Rô
 
 
 == Suglung Palwal ==
+{{wikivoyage}}
 * {{fr icon}} [http://www.cr-rhone-alpes.fr Regional Council website]
-* [http://wikitravel.org/en/Rhône-Alpes Rhône-Alpes on Wikitravel]
 * {{en icon}} [http://photos-of-france.site.voila.fr/sudest1en.html Photos of Rhône-Alpes]
 
 {{Prefectures of Rhône-Alpes}}
