/* Suglung Palwal */ Wikivoyage

--- a/Preah_Vihear_Lalawigan.mw
+++ b/Preah_Vihear_Lalawigan.mw
@@ -25,8 +25,8 @@ Ing lalawigan mipalagyu ya kaibat ning templo ning [[Prasat Preah Vihear]].
 
 == Suglung Palwal ==
 [[File:Preah Khan 003.JPG|right|300px]]
+{{wikivoyage|Preah Vihear}}
 * [http://www.preahvihear.com: PreahVihear.com]
-* [http://wikitravel.org/en/article/Preah_Vihear Wikitravel: Preah Vihear]
 * [http://www.tharum.info/2006/05/27/preah-vihear-province-in-pictures-part-i/ Preah Vihear province in pictures]
 * http://www.taxivantha.com/1_Cambodia/1211.htm
 {{Cambodia}}
