/* Suglung Palual */ Wikivoyage

--- a/Prepektura_ning_Kumamoto.mw
+++ b/Prepektura_ning_Kumamoto.mw
@@ -104,9 +104,9 @@ Balen at barriu keng balang [[Districts of Japan|distritu]]:
 
 == Suglung Palual ==
 {{commons}}
+{{wikivoyage|Kumamoto}}
 * [http://www.pref.kumamoto.jp/english/list.html Official Kumamoto Prefecture homepage]
 * [http://www2.kumagaku.ac.jp/teacher/~masden/links.html Kumamoto Links]
-* [http://wikitravel.org/en/Kumamoto Wikitravel guide to Kumamoto]
 * National Archives of Japan [http://jpimg.digital.archives.go.jp/jpg_prg/jgmWeb?%TmpFileDisp%env=jpeg2k_images/ezu/fukenchizu/031_kumamoto_e.env  ... Kumamoto map (1891)]
 
 
