/* Suglung Palwal */ Wikivoyage

--- a/Shikoku.mw
+++ b/Shikoku.mw
@@ -36,8 +36,7 @@ Ing Shikoku labuad, a bibilugan ning Shikoku at king kayang makapaligid, sasakup
 * [[Regions of Japan]]
 
 == Suglung Palwal ==
-* [http://wikitravel.org/en/article/Shikoku Wikitravel: Shikoku]
-
+{{wikivoyage}}
 {{Regions and administrative divisions of Japan}}
 
 {{coor title dm|33|45|N|133|30|E|region:JP_type:isle}}
