/* Suglung Palwal */ Wikivoyage

--- a/Denver,_Colorado.mw
+++ b/Denver,_Colorado.mw
@@ -131,8 +131,8 @@
 {{reflist|2}}
 
 == Suglung Palwal ==
+{{wikivoyage|Denver}}
 * [http://www.denvergov.org Official City and County of Denver site]
-* [http://wikitravel.org/en/Denver WikiTravel site for Denver]
 * [http://www.denverchamber.com Denver Metro Chamber of Commerce]
 * [http://www.citymayors.com/mayors/denver_mayor.html City Mayors' profile of John Hickenlooper, Mayor of Denver]
 * [http://denverlibrary.org Denver Public Library]
