/* Suglung Palwal */ Wikivoyage

--- a/Austria.mw
+++ b/Austria.mw
@@ -62,6 +62,7 @@ Ing Austria metung yang [[parliament]]ary [[representative democracy]] at ating 
 
 == Suglung Palwal ==
 {{sisterlinks|Austria}}
+{{wikivoyage}}
 * The ''[[aeiou Encyclopedia]]'' ([http://www.aeiou.at/;internal&action=_setlanguage.action?LANGUAGE=en Homepage] | [http://www.aeiou.at/aeiou.encyclop.a Table of Contents] | [http://www.aeiou.at/;internal&action=search.action Search])
 * [http://www.austria.info/ Austria.info] Official homepage of the Austrian National Tourist Office
 * [http://www.bundeskanzleramt.at/DesktopDefault.aspx?alias=english&init&init Federal Chancellery of Austria]
@@ -73,7 +74,6 @@ Ing Austria metung yang [[parliament]]ary [[representative democracy]] at ating 
 * [http://www.state.gov/r/pa/ei/bgn/3165.htm US Department of State] Facts and Information (updated February 2005)
 * [http://www.freeworldmaps.net/europe/austria/map.html Physical Map of Austria]
 * [http://web.archive.org/20060718171629/www.freewebs.com/austriapicture/ Pictures of Austria]
-* [http://wikitravel.org/en/Austria Travel information on Wikitravel]
 
 {{EU_countries}}
 {{Europe}}
