/* Suglung Palual */ Wikivoyage

--- a/Milpitas,_California.mw
+++ b/Milpitas,_California.mw
@@ -145,6 +145,7 @@ Kasiping lakanbalen:
 {{reflist}}
 
 ==Suglung Palual==
+{{wikivoyage|Milpitas}}
 *[http://www.ci.milpitas.ca.gov/ City of Milpitas]
 **[http://www.ci.milpitas.ca.gov/citydept/police/ Milpitas Police Department]
 **[http://www.ci.milpitas.ca.gov/about.htm City of Milpitas official statistics]
@@ -155,7 +156,6 @@ Kasiping lakanbalen:
 *[http://www.milpitaschamber.com Milpitas Chamber of Commerce]
 *[http://www.milpitasarts.com Milpitas Alliance for the Arts]
 *[http://www.milpitaspost.com/ The Milpitas Post, Milpitas' weekly newspaper]
-*[http://wikitravel.org/en/article/Milpitas Wikitravel guide to Milpitas]
 
 
 
