/* Suglung Palwal */ Wikivoyage

--- a/Hamburg.mw
+++ b/Hamburg.mw
@@ -35,7 +35,7 @@ Ing '''Hamburg''' ([[German language]] [[IPA|pronunciation]]: {{IPA|[ˈhambʊʁk
 
 == Suglung Palwal ==
 {{commonscat|Hamburg, Germany}}
-* [http://wikitravel.org/en/Hamburg Hamburg travel guide] - Wikitravel
+{{wikivoyage}}
 * {{dmoz|Regional/Europe/Germany/States/Hamburg/}}
 
 * [http://international.hamburg.de/?ba=english Official Hamburg website] - In many languages
