/* Suglung Pawal */ Wikivoyage

--- a/New_Orleans,_Louisiana.mw
+++ b/New_Orleans,_Louisiana.mw
@@ -62,9 +62,9 @@
 
 ==Suglung Pawal==
 {{sisterlinks|New Orleans}}
+{{wikivoyage|New Orleans}}
 *[http://www.cityofno.com Official Website of the City of New Orleans]
 *[http://www.NewOrleansOnline.com Official Tourism Website of the City of New Orleans]
-*[http://wikitravel.org/en/New_Orleans New Orleans travel guide] by [[Wikitravel]]
 *[http://thinknola.com/wiki/New_Orleans_Wiki New Orleans Wiki]
 
 {{New Orleans}}
