/* Suglung Palwal */ Wikivoyage

--- a/Korsega.mw
+++ b/Korsega.mw
@@ -95,10 +95,10 @@ Ding aliwang balen at baranggay:
 
 == Suglung Palwal ==
 {{commons|Corse|Corsica}}
+{{wikivoyage|Corsica}}
 * [http://www.photoglobe.info/db_corsica/index.html PhotoGlobe - Corsica] A collection of photos of Corsica together with GPS-based positions
 * [http://www.cnn.com/2003/WORLD/europe/07/06/corsica.poll/index.html CNN] CNN coverage of rejection of autonomy proposals in 2003
 * [http://fst.univ-corse.fr University of Corsica] 
-* [http://www.wikitravel.org Wikitravel] 
 {{Regions_of_France}}
 
 [[Category:Corsica|*]]
