deng banwang aktibu

--- a/Aisaku_Yokogawa.mw
+++ b/Aisaku_Yokogawa.mw
@@ -14,7 +14,7 @@
 | genre               = [[Original Pilipino Music|OPM]]<ref>[http://www.philstar.com/music/2014/01/11/1277678/japanese-singer-aisaku-yokogawa-prefers-opm-hits Japanese singer Aisaku Yokogawa prefers OPM hits]</ref>
 | occupation          = talakanta, modelu, talalikas (''interpreter'')
 | instrument          = siwala (''vocals'')
-| years_active        = 
+| years_active        = 2012-kasaleselan
 | label               = [[Universal Records]]
 | associated_acts     = [[4NOiZ]], Polvoron Brothers
 | website             = {{URL|www.aisakumusic.com}}
