*Empty MediaWiki Message*

--- a/Amanung_Gotiku.mw
+++ b/Amanung_Gotiku.mw
@@ -3,5 +3,5 @@ Ing '''Amanung Gotiku''' ([[Amanung Ingles|Ingles]]: ''Gothic'', [[Castila (aman
 
 {{Suli}}
 
-[[Category:Deng amanu ning Europa]]
+[[Category:Deng meteng amanu ning Europa]]
 [[Category:Deng amanung Ermaniku]]
