*Empty MediaWiki Message*

--- a/Template:Continents_of_the_world.mw
+++ b/Template:Continents_of_the_world.mw
@@ -1,5 +1,5 @@
 {| class="navbox collapsible {{{state|collapsed}}}" style="clear:both; width:100%; background:transparent;"
-!style="background:khaki; font-size:110%;"| {{Tnavbar-collapsible|[[Continent]]s of [[Earth|the world]]|Continents of the world}}
+!style="background:khaki; font-size:110%;"| {{Tnavbar-collapsible|Deng [[Kontinenti]] ning [[Yatu]]|Continents of the world}}
 |-
 |align="center" style="padding-top:8px;"|
 {| style="background:transparent; text-align:center;"
