Removing "Abdelaziz_Bouteflika_in_2006.jpg", it has been deleted from Commons by [[commons:User:INeverCry|INeverCry]] because: per [[:c:Commons:Deletion requests/Files of Haeel|]].

--- a/Abdelaziz_Bouteflika.mw
+++ b/Abdelaziz_Bouteflika.mw
@@ -1,6 +1,6 @@
 {{Infobox officeholder
 |name          = Abdelaziz Bouteflika<br><small>عبد العزيز بوتفليقة</small>
-|image         =Abdelaziz_Bouteflika_in_2006.jpg
+|image         =
 |office        = [[President of Algeria]]
 |primeminister = [[Smail Hamdani]]<br>[[Ahmed Benbitour]]<br>[[Ali Benflis]]<br>[[Ahmed Ouyahia]]<br>[[Abdelaziz Belkhadem]]<br>[[Ahmed Ouyahia]]
 |term_start    = 27 April 1999
