([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Illustration Allium schoenoprasum0 clean.jpg]] → [[File:Illustration Allium schoenoprasum and Allium cepa0 clean.jpg]] [[c:COM:FR#reasons|File renaming criterion #3]]: To correct obvious errors in file...

--- a/Chives.mw
+++ b/Chives.mw
@@ -1,7 +1,7 @@
 {{Otheruses1|the plant Chives}}
 {{Taxobox
 | name               = Chives
-| image              = Illustration Allium schoenoprasum0 clean.jpg
+| image              = Illustration Allium schoenoprasum and Allium cepa0 clean.jpg
 | regnum             = [[Plantae]]
 | unranked_divisio   = [[Angiosperms]]
 | unranked_classis   = [[Monocots]]
