*Empty MediaWiki Message*

--- a/Trenton,_New_Jersey.mw
+++ b/Trenton,_New_Jersey.mw
@@ -7,7 +7,7 @@
 |image_caption          = 
 |image_flag             = Trentoncityflag.jpeg
 |image_seal             = 
-|image_map              = Map of Mercer County highlighting Trenton City.png
+|image_map              = Mercer County New Jersey incorporated and unincorporated areas Trenton highlighted.svg
 |mapsize                = 250px
 |map_caption            = Location of Trenton inside of Mercer County
 |subdivision_type       = Bangsa
