Removing "Dominique_Venner.jpg", it has been deleted from Commons by [[commons:User:Jcb|Jcb]] because: per [[:c:Commons:Deletion requests/File:Dominique Venner.jpg|]].

--- a/Dominique_Venner.mw
+++ b/Dominique_Venner.mw
@@ -1,6 +1,6 @@
 {{Infobox writer 
 | name         = Dominique Venner
-|image         = Dominique Venner.jpg
+|image         =
 |image_size    = 200px
 | caption      = 
 | birth_name   = 
