--- a/Template:Country_data_Russia.mw
+++ b/Template:Country_data_Russia.mw
@@ -4,7 +4,7 @@
 | flag alias      = Flag of Russia.svg{{!}}border
 | flag alias-1858 = Romanov Flag.svg{{!}}border
 | flag alias-1914 = Russian Empire 1914 17.svg{{!}}border
-| flag alias-SFSR = Flag of Russian SFSR.svg
+| flag alias-SFSR = Flag of the Russian SFSR.svg
 | countryname = {{{countryname|Russia<!-- MUST MATCH SUFFIX OF PAGENAME!! -->}}}
 | size = {{{size|}}}
 | name = {{{name|}}}
