*Empty MediaWiki Message*

--- a/Chantal_Andere.mw
+++ b/Chantal_Andere.mw
@@ -1,3 +1,3 @@
-I '''Chantal Andere''' (mibait '''Jacqueline Chantal Fernández Andere''' anyang Eneru 25, 1972) metung yang artista king [[Mexico|Meyiku]].
+I '''Chantal Andere''' (mibait '''Jacqueline Chantal Fernández Andere''' anyang [[Eneru]] 25, 1972) metung yang artista king [[Mexico|Meyiku]].
 
 {{stub}}
