Replacing USMC_logo.svg with [[File:Seal_of_the_United_States_Marine_Corps.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/Joseph_M._Acaba.mw
+++ b/Joseph_M._Acaba.mw
@@ -23,7 +23,7 @@ I '''Joseph Michael "Joe" Acaba''' (mibait Mayu 17, 1967 king [[Inglewood, Calif
 
 == Lawen ya rin==
 {{portal|Puerto Rico|Flag_of_Puerto_Rico.svg}}
-{{portal|United States Marine Corps|USMC logo.svg}}
+{{portal|United States Marine Corps|Seal of the United States Marine Corps.svg}}
 *[[List of famous Puerto Ricans]]
 *[[Puerto Rican scientists and inventors]]
 {{-}}
