Replacing Flag_of_United_Arab_Republic.svg with [[File:Flag_of_the_United_Arab_Republic.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]:).

--- a/Template:Country_data_Egypt.mw
+++ b/Template:Country_data_Egypt.mw
@@ -5,7 +5,7 @@
 | flag alias-1882 = Flag of Egypt (1882-1922).svg
 | flag alias-1922 = Flag of Egypt (1922–1958).svg
 | flag alias-1952 = Flag of Egypt (1952-1958).svg
-| flag alias-UAR  = Flag of United Arab Republic.svg
+| flag alias-UAR  = Flag of the United Arab Republic.svg
 | flag alias-1972 = Flag of Egypt (1972-1984).svg
 | flag alias-naval = Naval Ensign of Egypt.svg
 | link alias-naval = Egyptian Navy
