*Empty MediaWiki Message*

--- a/Atin_Ku_Pûng_Singsing.mw
+++ b/Atin_Ku_Pûng_Singsing.mw
@@ -1,19 +1,19 @@
 Ini kanta yang tradisyunal a Capampangan. 
 
 '''ATIN CU PUNG SINGSING'''<p>
-Putang inang singsing
-Metung yang timpukan<br>
-Amana que iti quing Indung ibatan<br>
-Sangkan queng sininup<br>
-Quiñg metung a caban<br>
-Me wala ya iti, ecu camalayan<p>
+Atin cu pung singsing
+Metung yang timpucan<br>
+Amana que iti<br>
+Queng indung ibatan<br>
+Sancan queng sininup<br>
+Quing metung a caban<br>
+Mewala ya iti<br>
+E cu camalayan<p>
 Ing sucal ning lub cu<br>
-Susucdul qñg banua<br>
+Susucdul queng banua<br>
 Picurus cung gamat<br>
 Babo ning lamesa<br>
 Ninu mang manaquit<br>
-Quiñg singsing cung mana<br>
+Quing singsing cung mana<br>
 Calulung pusu cu<br>
 Manguinu ya ceca<br>
-
-marakal ing makabalu king kantang ini
