*Empty MediaWiki Message*

--- a/Atin_Ku_Pûng_Singsing.mw
+++ b/Atin_Ku_Pûng_Singsing.mw
@@ -1,7 +1,7 @@
 Ini kanta yang tradisyunal a Capampangan. 
 
 '''ATIN CU PUNG SINGSING'''<p>
-Atin cu pung singsing
+Atin cu pung singsing<br>
 Metung yang timpucan<br>
 Amana que iti<br>
 Queng indung ibatan<br>
