*Empty MediaWiki Message*

--- a/Atin_Ku_Pûng_Singsing.mw
+++ b/Atin_Ku_Pûng_Singsing.mw
@@ -1,3 +1,5 @@
+Metung yang katutubong kanta queng Central Luzon kareng Kapampangan.
+
 '''ATIN CU PUNG SINGSING''' <p>
 Atin cu pung singsing<br>
 Metung yang timpucan<br>
