*Empty MediaWiki Message*

--- a/Camellia_sinensis.mw
+++ b/Camellia_sinensis.mw
@@ -41,6 +41,8 @@
 * ''Theaphylla cantonensis ''(Loureiro) Rafinesque
 |synonyms_ref = <ref name=FOC/>
 }}
+[[File:Camellia sinensis MHNT.BOT.2016.12.24.jpg|thumb|''Camellia sinensis'']]
+
 Ing '''''Camellia sinensis''''' ing [[species]] ning [[tanaman]] nung nu gagawan de ing pikabaluan a inuman a '''[[tsa]]'''. Kayabe ya king genus a ''[[Camellia]]'' ({{zh|t=茶花|s=茶花|p=Cháhuā, literal a kabaldugan: "sampagang tsa"}}), a genus of flowering plants in the family [[Theaceae]]. Deng [[White tea]], [[yellow tea]], [[green tea]], [[oolong]], [[pu-erh tea]] ampong [[black tea]] are all ibat la ngan king species a ini, oneng dadalan la kareng miayaliwang prosesu ba rong dasan deng miayaliwang ketasan o lebel ning [[oxidation]]. Ing [[Kukicha]] (twig tea) mapupupul ya mu naman king ''Camellia sinensis'', oneng sanga ampong tangke ing gagamitan para kaniti, at e bulung. 
 
 Adwa la reng manimunang uri o varieties a gagamitan para king tsa, ing Chinese tea, ''Camellia sinensis'' var. ''sinensis'', ampo ing Assam tea, ''Camellia sinensis'' var. ''assamica''.<ref>[http://www.itis.gov/servlet/SingleRpt/SingleRpt?search_topic=TSN&search_value=506801 ITIS Standard Report Page Camellia Sinensis] retrieved 2009-03-28.</ref>
