--- a/Template:Country_data_Portugal.mw
+++ b/Template:Country_data_Portugal.mw
@@ -8,7 +8,7 @@
 | flag alias-1640 = Flag Portugal (1640).svg
 | flag alias-1707 = Flag Portugal (1707).svg
 | flag alias-1750 = PortugueseFlag1750.png
-| flag alias-1816 = Flag United Kingdom Portugal Brazil Algarves.svg
+| flag alias-1816 = Flag of the United Kingdom of Portugal, Brazil, and the Algarves.svg
 | flag alias-1830 = Flag Portugal (1830).svg
 | link alias-naval = Portuguese Navy
 | size = {{{size|}}}
