--- a/Yohan_Hwang.mw
+++ b/Yohan_Hwang.mw
@@ -47,3 +47,6 @@ I '''Yohan Hwang''' (mibait Nobyembri 27, 1995), metung yang talakantang Mauling
 * {{Facebook|officialyohan}}
 
 {{Suli}}
+
+[[Category:Deng Koreanu]]
+[[Category:Deng talakanta ibat Mauling Korea]]
