Update inf. from wiki (en) + (pt) + (fr)

--- a/Anggola.mw
+++ b/Anggola.mw
@@ -22,11 +22,11 @@ percent_water = Negligible |
 population_estimate = 10,978,552 |
 population_estimate_year = 2004 |
 population_estimate_rank = 71st |
-population_census = ''unavailable'' |
-population_census_year = ? |
-population_density = 8.6 |
-population_densitymi² = 22.3 | <!--Do not remove -->
-population_density_rank = 213 |
+population_census = 25,789,024 |
+population_census_year = 2014 |
+population_density = 20.7 |
+population_densitymi² = 53.6 | <!--Do not remove -->
+population_density_rank = 199 |
 GDP_PPP_year = 2003 |
 GDP_PPP = 31,364<sup>1</sup> |
 GDP_PPP_rank = 83 |
