mialilan lugal ning kebaitan

--- a/Yohan_Hwang.mw
+++ b/Yohan_Hwang.mw
@@ -14,7 +14,7 @@
 | birth_name          = 황요한 (Hwang Yo-han)
 | alias               = 
 | birth_date          = {{Birth date and age|1995|11|27}}<ref>{{cite web|title=EXCLUSIVE: Fun facts you should know about Korean heartthrob Yohan Hwang|url=http://push.abs-cbn.com/features/64080/exclusive-fun-facts-you-should-know-about-korean-heartthrob-yohan-hwang/|website=ABS-CBN Push|accessdate=18 May 2016}}</ref>
-| birth_place         = [[Seoul]], [[Mauling Korea]]
+| birth_place         = [[Goyang]], [[Gyeonggi-do]], [[Mauling Korea]]
 | origin              = 
 | genre               = [[K-pop]], [[Music of the Philippines#OPM|OPM]], ''[[Ballad]]''
 | occupation          = 
