miyalilan lagyu ning talagamit king TW at IG

--- a/Yohan_Hwang.mw
+++ b/Yohan_Hwang.mw
@@ -42,8 +42,8 @@ I '''Yohan Hwang''' (mibait Nobyembri 27, 1995), metung yang talakantang Mauling
 {{reflist|30em}}
 
 ==Kasusug Kiluwal==
-* {{instagram|kcuteyohan}}
-* {{Twitter|kcuteyohan}}
+* {{instagram|imyohanhwang}}
+* {{Twitter|imyohanhwang}}
 * {{Facebook|officialyohan}}
 
 {{Suli}}
