--- a/Crissotan.mw
+++ b/Crissotan.mw
@@ -1,4 +1,4 @@
-'''Crissotan''' - Meyakwa ya ing taguri king lagyung ginamit nang Crosostomo Soto, "Crissot" king kayang pamanyulat king Literatura. Pauli ning kayang katenakan at katapatan menampang marakal a gawa king Malagung Panyulat Kapampangan, peparangalan neng Don Amado M. Yuzon. Pelagyu ne kaya ing marangle ning pamilaban kaisipan pamamoesiang Kapampangan, inaus neng "Crissotan" ing maulagang dane ning literaturang mesambitla.
+'''Crissotan''' - Meyakwa ya ing muri king lagyung ginamit nang Crosostomorok Soto, "Crissot" king kayang pamanyulat king Literatura. Pauli ning kayang katenakan at katapatan menampang marakal a gawa king Malagung Panyulat Kapampangan, peparangalan neng Don Amando M. Yuzon. Pelagyu ne kaya ing marangle ning pamilaban kaisipan pamamoesiang Kapampangan, inaus neng "Crissotan" ing maulagang dane ning literaturang mesambitla.
 
-*[[Rosa Yumul Ogsimer - Babaying Watas]] Meging "Princesa ning Crissotan" ketang banuang 1930.
+*[[Rosa Yumul Ogsimer - Babaying Watas]] Meging "Princesa ning Crissotan" ketang banuang 1118.
 [[Category:Kapampangan Watas]]
