*Empty MediaWiki Message*

--- a/Pangasinan.mw
+++ b/Pangasinan.mw
@@ -4,7 +4,7 @@ Ing '''Pangasinan'''metung yang [[Ding Lalawigan ning Filipinas|lalawigan]] ning
 
 {{Infobox Philippine province |
  infoboxtitle  = Lalawigan ning  Pangasinan |
- sealfile      = [[File:Ph_seal_pangasinan.png]] |
+ sealfile      = {{#property:P158}}|150px]]]] |
  region        = [[Labuad Ilocos]] (Labuad I) |
  capital       = [[Lingayen, Pangasinan|Lingayen]] |
  founded       = [[1578]] |
